--- a/module_static/web/apache/config/ports.conf
+++ b/module_static/web/apache/config/ports.conf
@@ -2,7 +2,7 @@
 # have to change the VirtualHost statement in
 # /etc/apache2/sites-enabled/000-default.conf
 
-Listen ${APACHE_BIND_ADDRESS}:80
+Listen ${APACHE_BIND_ADDRESS}:${APACHE_PORT}
 
 <IfModule ssl_module>
 	Listen ${APACHE_BIND_ADDRESS}:4430
