--- a/module_static/web/apache/config/sites-available/000-default.conf
+++ b/module_static/web/apache/config/sites-available/000-default.conf
@@ -1,92 +1,38 @@
-<VirtualHost ${APACHE_BIND_ADDRESS}:${APACHE_PORT}>
-	# The ServerName directive sets the request scheme, hostname and port that
-	# the server uses to identify itself. This is used when creating
-	# redirection URLs. In the context of virtual hosts, the ServerName
-	# specifies what hostname must appear in the request's Host: header to
-	# match this virtual host. For the default virtual host (this file) this
-	# value is not decisive as it is used as a last resort host regardless.
-	# However, you must set it for any further virtual host explicitly.
-	ServerName ${APACHE_SERVER_NAME}
-
+<VirtualHost *:8000>
 	ServerAdmin webmaster@localhost
-	DocumentRoot ${APACHE_DOC_ROOT}
 
-	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
-	# error, crit, alert, emerg.
-	# It is also possible to configure the loglevel for particular
-	# modules, e.g.
-	#LogLevel info ssl:warn
+	DocumentRoot /home/router/mbah-router/module_static/web/apache/docs
+	<Directory />
+		Options FollowSymLinks
+		AllowOverride None
+	</Directory>
+	<Directory /home/router/mbah-router/module_static/web/apache/docs>
+		Options Indexes FollowSymLinks MultiViews
+		AllowOverride None
+		Order allow,deny
+		allow from all
+
+		#AddHandler mod_python .py
+		SetHandler mod_python
+		PythonHandler router
+		#PythonAuthenHandler myscript
+		PythonDebug On
+
+	</Directory>
+
+	ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
+	<Directory "/usr/lib/cgi-bin">
+		AllowOverride None
+		Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+		Order allow,deny
+		Allow from all
+	</Directory>
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
+
+	# Possible values include: debug, info, notice, warn, error, crit,
+	# alert, emerg.
+	LogLevel warn
+
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
-
-	# For most configuration files from conf-available/, which are
-	# enabled or disabled at a global level, it is possible to
-	# include a line for only one particular virtual host. For example the
-	# following line enables the CGI configuration for this host only
-	# after it has been globally disabled with "a2disconf".
-	#Include conf-available/serve-cgi-bin.conf
-
-    <Directory ${APACHE_DOC_ROOT}>
-    	Require all granted
-        SetHandler mod_python
-        PythonHandler mod_python.publisher
-        PythonDebug On
-	PythonOption note.repo_location ${NOTE_REPO_LOCATION}
-    </Directory>
-
-#    Redirect / https://${APACHE_SERVER_NAME}/
-
 </VirtualHost>
-
-#<VirtualHost ${APACHE_BIND_ADDRESS}:${APACHE_SSL_PORT}>
-#	SSLEngine On
-#	SSLCertificateFile      ${APACHE_CERT_FILE}
-#	SSLCertificateKeyFile   ${APACHE_CERT_KEY_FILE}
-#	SSLCertificateChainFile ${APACHE_CERT_CHAIN_FILE}
-#
-#
-#	# The ServerName directive sets the request scheme, hostname and port that
-#	# the server uses to identify itself. This is used when creating
-#	# redirection URLs. In the context of virtual hosts, the ServerName
-#	# specifies what hostname must appear in the request's Host: header to
-#	# match this virtual host. For the default virtual host (this file) this
-#	# value is not decisive as it is used as a last resort host regardless.
-#	# However, you must set it for any further virtual host explicitly.
-#	ServerName ${APACHE_SERVER_NAME}
-#
-#	ServerAdmin webmaster@localhost
-#	DocumentRoot ${APACHE_DOC_ROOT}
-#
-#	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
-#	# error, crit, alert, emerg.
-#	# It is also possible to configure the loglevel for particular
-#	# modules, e.g.
-#	#LogLevel info ssl:warn
-#
-#	ErrorLog ${APACHE_LOG_DIR}/error.log
-#	CustomLog ${APACHE_LOG_DIR}/access.log combined
-#
-#	# For most configuration files from conf-available/, which are
-#	# enabled or disabled at a global level, it is possible to
-#	# include a line for only one particular virtual host. For example the
-#	# following line enables the CGI configuration for this host only
-#	# after it has been globally disabled with "a2disconf".
-#	#Include conf-available/serve-cgi-bin.conf
-#
-#    <Directory ${APACHE_DOC_ROOT}>
-#    	Options Indexes FollowSymLinks
-#    	AllowOverride None
-#    	Require all granted
-#    </Directory>
-#
-#    <Directory ${APACHE_DOC_ROOT}/api/>
-#        SetHandler mod_python
-#        PythonHandler mod_python.publisher
-#        PythonDebug On
-#		PythonOption note.repo_location ${NOTE_REPO_LOCATION}
-#		PythonPath "sys.path+['${APACHE_PYLIB_DIR}']"
-#    </Directory>
-#
-#</VirtualHost>
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
